OC3 = OpenCart 3
PS  = PrestaShop
VM3 = VirtueMart3 (Joomla)
WC  = WooCommerce (WordPress) (alle ondersteunde versies, vanaf 5.5.2 is dat alleen nog WC3)
WC2 = WooCommerce 2 (WordPress)
WC3 = WooCommerce 3 (WordPress)

5.6.1 (2019-03-??)
------------------
Bugs:
- ALL: Facturen voor klanten buiten de EU waar gewoon btw wordt geheven kregen
  niet factuurtype 1 toegewezen.

Features:
- WC/MA/PS: (These are the web shops that do support credit notes.): "Property
  source" 'originalInvoiceOrder' in ere hersteld. Deze info is af en toe toch
  nodig. Deze property verwijst nu naar de Acumulus wrapper om de
  (oorspronkelijke) order heen. NB: deze property bestaat alleen in shops die
  creditfacturen ondersteunen.
- WC/MA/PS: (These are the web shops that do support credit notes.): "Property
  sources" 'refundedInvoceSource' en 'refundedOrder' toegevoegd. In
  tegenstelling tot de property sources 'originalInvouiceSource' en
  'originalOrder' hebben deze nieuwe property sources alleen een waarde als het
  daadwerkelijk een refund betreft.
- ALL: Standaard waarde voor het veld 'toelichting' bevat voor een creditfactuur
  nu ook een verwijzing naar de oorspronkelijke bestelling.
- WC/MA/PS: (These are the web shops that do support credit notes.): Het niet
  automatisch verzenden van een creditfactuur werd niet duidelijk gelogd.
- ALL: Een helptekst over factuurnummers verbeterd.

5.6.0 (2019-03-13)
------------------
Bugs:
- ALL: (but mostly WC) to retrieve vat rates based on vat classes, we normally
  need a country code. If no country code has been saved in the customer info,
  this might fail. so "completing" the country code (with nl as default) will
  now be done directly when retrieving the address data.
- WC: You can refund a fraction of an article (price) but Woocommerce will still
  store quantity as an integer rounded towards 0 (and thus possibly even 0). We
  now do accept this, but unit prices may be strange, though line totals should
  be correct.