@@ -96,7 +96,7 @@ class Creator extends BaseCreator
             $result += array(
                 Tag::UnitPrice => $productPriceEx,
                 Meta::UnitPriceInc => $productPriceInc,
-                Meta::RecalculateUnitPrice => $this->productPricesIncludeTax(),
+                Meta::RecalculatePrice => $this->productPricesIncludeTax() ? Tag::UnitPrice : Meta::UnitPriceInc,
             );
         }
         $result[Tag::Quantity] = $item->getQtyOrdered();
@@ -188,7 +188,7 @@ class Creator extends BaseCreator
             $result += array(
                 Tag::UnitPrice => $productPriceEx,
                 Meta::UnitPriceInc => $productPriceInc,
-                Meta::RecalculateUnitPrice => $this->productPricesIncludeTax(),
+                Meta::RecalculatePrice => $this->productPricesIncludeTax() ? Tag::UnitPrice : Meta::UnitPriceInc,
                 Meta::LinesVatAmount => $lineVat,
             );
         }
@@ -266,7 +266,7 @@ class Creator extends BaseCreator
                 $result += array(
                         Tag::UnitPrice => $shippingEx,
                         Meta::UnitPriceInc => $shippingInc,
-                        Meta::RecalculateUnitPrice => $this->shippingPriceIncludeTax(),
+                        Meta::RecalculatePrice => $this->shippingPriceIncludeTax() ? Tag::UnitPrice : Meta::UnitPriceInc,
                     ) + $this->getVatRangeTags($shippingVat, $shippingEx, 0.02,$this->shippingPriceIncludeTax() ? 0.02 : 0.01);
                 $result[Meta::FieldsCalculated][] = Meta::VatAmount;
 
